# RCAP

./: CMakeLists.txt  README.md  frames.gv  package.xml  rcap.build.all.sh  rcap.clean.all.sh  rcap.setup.all.sh  rcap.start.all.sh  rcap.start.follow.sh  rcap.start.nav.sh
config/: nav2_params.yaml
description/: robot_car.joint.state.gui.urdf  robot_car.physical.urdf  robot_car.rqt.steering.urdf  robot_car.urdf  robot_car.vm.simulation.urdf
launch/: display.launch.py  rcap.physical.follow.launch.py  rcap.physical.integrate.drive.launch.py  rcap.physical.integrate.lidar.launch.py  (+12 more)
mpu9250/: CMakeLists.txt  package.xml
mpu9250/config/: imu_calibration.yaml
mpu9250/include/: I2cCommunicator.h  mpu9250driver.h  mpu9250sensor.h
mpu9250/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
mpu9250/install/mpu9250driver/lib/mpu9250driver/: mpu9250driver
mpu9250/install/mpu9250driver/share/mpu9250driver/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
mpu9250/install/mpu9250driver/share/mpu9250driver/cmake/: mpu9250driverConfig.cmake
mpu9250/launch/: mpu9250driver_launch.py
mpu9250/lib/i2c/include/i2c_comm_interface/: I2cCommunicator.h
mpu9250/lib/i2c/include/linux_i2c_communicator/: LinuxI2cCommunicator.h
mpu9250/lib/mpu9250sensor/include/mpu9250sensor/: mpu9250sensor.h
mpu9250/lib/mpu9250sensor/src/: mpu9250sensor.cpp
mpu9250/log/: latest_build
mpu9250/src/: I2cCommunicator.cpp  mpu9250driver.cpp  mpu9250sensor.cpp
robot_car/: CMakeLists.txt  package.xml
robot_car/config/: ekf.physical.yaml  ekf.simulation.yaml  nav2.physical.yaml
robot_car/description/: robot_car.physical.fixed.wheels.urdf  robot_car.physical.urdf  robot_car.vm.rqt.steering.urdf
robot_car/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_car/install/robot_car/share/ament_index/resource_index/package_run_dependencies/: robot_car
robot_car/install/robot_car/share/robot_car/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot_car/install/robot_car/share/robot_car/config/: ekf.yaml  nav2_params.yaml
robot_car/install/robot_car/share/robot_car/description/: robot_car.physical.urdf  robot_car.vm.joint.state.gui.urdf  robot_car.vm.simulation.urdf
robot_car/install/robot_car/share/robot_car/launch/: robot_car.vm.joint.state.gui.launch.py  robot_car.vm.simulation.launch.py
robot_car/install/robot_car/share/robot_car/rviz/: urdf_config.simulation.rviz
robot_car/launch/: drive_controller_launch.py  imu_broadcaster_launch.py  robot_car.physical.integration.launch.py  robot_car.physical.launch.py  robot_car.vm.display.launch.py  robot_car.vm.joint.state.gui.launch.py  robot_car.vm.simulation.launch.py  vel_forwarder_launch.py  wall_follower_launch.py
robot_car/log/: latest_build
robot_car/rviz/: urdf_config.physical.rviz
robot_car/scripts/: drive_controller.py  vel_forwarder.py  wall_follower.py
robot_car/src/: imu_broadcaster.cpp
robot_car/test/: setGoals.sh
rplidar/: CMakeLists.txt  package.xml
rplidar/launch/: rplidar_launch.py
rplidar/rviz/: rplidar_ros2.rviz
rplidar/sdk/include/: rplidar_cmd.h  rplidar_protocol.h
rplidar/sdk/src/: rplidar_driver.cpp
rplidar/src/: rplidar_scan_publisher.cpp
(+15 files in other folders)
