<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mpu9250driver</name>
  <version>1.0.0</version>
  <description>RCAP project - MPU9250 IMU driver</description>  
  <maintainer email="halstar@hotmail.com">HalStar</maintainer>
  <license>GNU GPL Version 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
